--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
   "rules": {
     "@typescript-eslint/consistent-type-imports": "warn",
+    "@typescript-eslint/no-unsafe-call": "warn",
+    "@typescript-eslint/no-unsafe-assignment": "warn",
+    "@typescript-eslint/no-unsafe-member-access": "warn",
     "@typescript-eslint/no-misused-promises": [2, {
       "checksVoidReturn": {
         "attributes": false
