--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@types/readable-stream": "^2.3.15",
+    "eventsource-parser": "^0.1.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "node-fetch": "^3.3.0",
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +32,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/eventsource": "^1.1.11",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
